# study

./: .gitignore  .gitmodules
study-godot-cpp/demo/: .gitignore  main.tscn
study-godot-cpp/src/: gdexample.cpp  gdexample.h  register_types.h
study-imgui/: CMakeLists.txt
study-imgui-sdl2/: CMakeLists.txt  readme.md  vcpkg.json
study-imgui-sdl2/src/: imgui_impl_sdl2.cpp  main.cpp
study-imgui-sdl3/: vcpkg.json
study-imgui-sdl3/src/: main.cpp
study-ogre/: .gitignore  CMakeLists.txt  CMakePresets.json  guide.md  main.cpp  readme.txt  vcpkg.json
study-ogre-1/: main.cpp  readme.txt
study-ogre-1/cfg/: plugins.cfg  resources.cfg
study-ogre-2/: main.cpp
study-ogre-2/cfg/: resources.cfg
study-ogre-nav6/: .gitignore  CMakeLists.txt  HexMapVisualizer.cpp  HexMapVisualizer.h  main.cpp  vcpkg.json
study-ogre-nav6/doc/: VertexColour.material
study-ogre-nav6/include/: ActorStateControl.h  CameraStateControl.h  CameraUpdater.h  CameraUtil.h  CellFocusStateControl.h  CellManager.h  CellMark.h  CellMarkStateControl.h  CellRender.h  CellStateControl.h  CellUtil.h  CostMap.h  GridManager.h  GridRender.h  GridState.h  HexApp.h  HexGridApp.h  HexGridPrinter.h  HexMapVisualizer.h  HexNavigationGrid.h  InputState.h  InputStateModifier.h  KeyHandler.h  MainInputListener.h  MaterialFactory.h  PathFollow2.h  PathStateControl.h  Polygon2.h  State.h  StateControl.h  WorldStateControl.h
study-ogre-nav6/include/core/: ActorStateControl.h  CameraStateControl.h  CellMarkStateControl.h  CellStateControl.h  HexGridApp.h  IWorld.h  MainInputListener.h  MaterialFactory.h  PathFollow2.h  PathStateControl.h  State.h  StateControl.h  WorldStateControl.h
study-ogre-nav6/include/fg/: ActorState.h  Application.h  Core.h  Ground.h  IWorld.h  InputState.h  Mission.h  Module.h  PathFollow2.h  RootState.h  State.h  StateControl.h  WorldState.h  defines.h
study-ogre-nav6/include/fg/control/: ActorStateControl.h  CameraStateControl.h  CellMarkStateControl.h  CellStateControl.h  HexGridApp.h  PathStateControl.h  SpriteStateControl.h  StateControl.h  WorldStateControl.h
study-ogre-nav6/include/fg/core/: ActorState.h  ActorStateControl.h  CameraState.h  CellMarkStateControl.h  CellStateControl.h  HexGridApp.h  MainInputListener.h  MaterialFactory.h  MissionState.h  MouseClickPicker.h  PathFollow2MissionState.h  PathModule.h  PathState.h  PathStateControl.h  RootState.h  SimpleApp.h  SimpleCore.h  SimpleGround.h  WorldState.h
study-ogre-nav6/include/fg/example/: ActorState.h  ActorStateControl.h  CameraStateControl.h  CellMarkStateControl.h  CellStateControl.h  Example.h  MainInputListener.h  OrderedSet.h  PathState.h  WorldStateControl.h
study-ogre-nav6/include/fg/listener/: ActorAnimationFramelistener.h
study-ogre-nav6/include/fg/util/: CellUtil.h  CostMap.h  DrawerUtil.h  StateUtil.h
study-ogre-nav6/include/util/: Component.h  Module.h
study-ogre-nav6/src/: CameraUpdater.cpp  HexApp.cpp  HexGridApp.cpp  HexGridPrinter.cpp  HexMapVisualizer.cpp  HexNavigationGrid.cpp  main.cpp
study-ogre-nav6/tmp/: main.cpp
study-ogre-nav6a/: CMakeLists.txt  main.cpp
study-ogre-nav6b/: main.cpp
study-ogre-nav6c/: main.cpp
study-ogre-nav6c/tmp/: HexMapVisualizer.cpp
study-ogre-nav6d/: main.cpp
study-ogre-nav6d/materials/: VertexColour.material  myFrag.glsl  myVertex.glsl
study-ogre-nav6e/: CMakeLists.txt  main.cpp
study-ogre-nav6e/doc/: VertexColour.material
study-ogre-nav8/: CMakeLists.txt  main.cpp
study-ogre/cfg/: plugins.cfg  (+1 more)
study-terrain-generate/: .gitignore  main.cpp
(+2 files in other folders)
